# abc-bootcamp

./: EXERCISE_1_COMPLETE.md  EXERCISE_2_COMPLETE.md  README.md  STARTUP_GUIDE.md  Untitled.sql  claude.md  docker-compose.yml  test.md
.github/workflows/: claude.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  candidates.py  positions.py
backend/app/core/: security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  candidate.py  candidate_position.py  document.py  education.py  experience.py  position.py  position_skill.py  skill.py  user.py
backend/app/repositories/: candidate.py  candidate_position.py  position.py
backend/app/schemas/: auth.py  candidate.py  position.py  user.py
backend/app/services/: auth.py  candidate.py
backend/scripts/: create_admin_user.py  seed_db.py  setup_test_db.sh
backend/tests/: conftest.py
backend/tests/api/: test_auth_endpoints.py  test_candidate_positions.py  test_candidates.py  test_positions.py
backend/tests/fixtures/: factories.py
backend/tests/unit/: test_models.py  test_security.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: auth.ts  authService.ts  candidates.ts  client.ts  config.ts  positions.ts  types.ts
frontend/src/data/: candidates.json  positions.json
(+13 files in other folders)
